--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
     "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
