--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://sfb.somee.com/api
+# VITE_API_URL=https://sfb.somee.com/api
 VITE_APP_KEY=SuperFacebookKeyToAccess
+VITE_API_URL=https://sfb.fly.dev/api
