update CVV encrypt

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_API_URL=https://sfb.somee.com/api
 VITE_APP_KEY=SuperFacebookKeyToAccess
 VITE_API_URL=https://sfb.fly.dev/api
+VITE_CRYPTO_SECRET="HDG_AGC_1123_33212_3313_123123_4321"
