--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.555.0",
+    "moment": "^2.30.1",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
